[package]
name = "greenhook"
version = "0.0.1"
edition = "2021"
description = "A seccomp-unotify-based syscall hook library for Linux 5.6+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libseccomp = { version = "0.3.0", features = ["const-syscall"] }
libseccomp-sys = "0.2.1"
log = "0.4.17"
nix = "0.26.2"
threadpool = "1.8.1"

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2.11"
